Brands section overflow fixed, stats section done

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -239,6 +239,7 @@ body {
     display: flex;
     justify-content: center;
     gap: 7.6rem;
+    flex-wrap: wrap;
   }
 
   &__brand {
@@ -256,13 +257,12 @@ body {
   &__brand.active > svg {
     fill: #5982E7;
   }
-
 }
 
 // plan and manage
 .plan-and-manage {
   background: rgba(245, 248, 255, 1);
-  padding: 21rem 0;
+  padding: 21rem 2rem;
 
   &__inner {
     display: flex;
@@ -307,7 +307,7 @@ body {
 // about
 .about {
   background-color: $color-white;
-  padding: 17.1rem 0;
+  padding: 17.1rem 2rem;
 
   &__inner {
     display: flex;
@@ -332,6 +332,8 @@ body {
   &__main {
     display: flex;
     gap: 7rem;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
   &__item {
@@ -426,20 +428,28 @@ body {
     background-color: rgba(104, 136, 255, 1);
     padding: 6.6rem 9.1rem 6.6rem 0;
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
+  }
+
+  &__right {
+    width: 50%;
+    color: rgba(94, 128, 255, 1);
+    background-color: rgba(233, 239, 255, 1);
+    padding: 6.6rem 0 6.6rem 9.1rem;
+    display: flex;
+    justify-content: flex-start;
   }
 
   &__item {
     display: flex;
     flex-direction: column;
     gap: 2.4rem;
-
     font-family: $font-secondary;
 
     &--left {
       color: $color-white;
-      align-items: flex-end;
       text-align: right;
+      align-items: flex-end;
     }
 
     &--right {
@@ -468,15 +478,7 @@ body {
     line-height: 2.3rem;
     max-width: 26rem;
   }
-
-  &__right {
-    width: 50%;
-    color: rgba(94, 128, 255, 1);
-    background-color: rgba(233, 239, 255, 1);
-    padding: 6.6rem 0 6.6rem 9.1rem;
-  }
 }
-
 
 // subtitle
 .subtitle {
@@ -571,7 +573,10 @@ body {
   }
 }
 
-
+// hidden
+.hidden {
+  display: none;
+}
 
 
 
